executable('direct_yoga_test',
  'direct_yoga_test/main.cpp',
  dependencies : vaura_dep,
)

executable('hello_world',
  'hello_world.cpp',
  dependencies : vaura_dep,
)

executable('login_form',
  'login_form.cpp',
  dependencies : vaura_dep,
)
executable('scroll_test',
  'scroll_test.cpp',
  dependencies : vaura_dep,
)
