executable('direct_yoga_test',
  'direct_yoga_test/main.cpp',
  dependencies : vaura_dep,
)

executable('hello_world',
  'hello_world.cpp',
  dependencies : vaura_dep,
)

executable('login_form',
  'login_form.cpp',
  dependencies : vaura_dep,
)
executable('scroll_test',
  'scroll_test.cpp',
  dependencies : vaura_dep,
)

executable('components_demo',
  sources: ['components_demo.cpp'],
  dependencies: vaura_dep,
)

executable('animations_demo',
  sources: ['animations_demo.cpp'],
  dependencies: vaura_dep,
)

executable('shaders_demo',
  sources: ['shaders_demo.cpp'],
  dependencies: vaura_dep,
)

executable('shader_button_demo',
  sources: ['shader_button_demo.cpp'],
  dependencies: vaura_dep,
)

executable('game_demo',
  sources: ['game_demo.cpp'],
  dependencies: vaura_dep,
)

executable('cubelovers_demo',
  sources: ['cubelovers_demo/cubelovers_demo.cpp'],
  dependencies: vaura_dep,
)

executable('cyberfuji_demo',
  sources: ['cyberfuji_demo/cyberfuji_demo.cpp'],
  dependencies: vaura_dep,
)

executable('seascape_demo',
  sources: ['seascape_demo/seascape_demo.cpp'],
  dependencies: vaura_dep,
)

executable('primitives_demo',
  sources: ['primitives_demo/primitives_demo.cpp'],
  dependencies: vaura_dep,
)

executable('icon_demo',
  sources: ['icon_demo/icon_demo.cpp'],
  dependencies: vaura_dep,
)

executable('checkbox_demo',
  sources: ['checkbox_demo.cpp'],
  dependencies: vaura_dep,
)

executable('radio_demo',
  sources: ['radio_demo.cpp'],
  dependencies: vaura_dep,
)

executable('card_demo',
  sources: ['card_demo.cpp'],
  dependencies: vaura_dep,
)

executable('divider_demo',
  sources: ['divider_demo.cpp'],
  dependencies: vaura_dep,
)

executable('slider_demo',
  sources: ['slider_demo.cpp'],
  dependencies: vaura_dep,
)

executable('linear_progress_demo',
  sources: ['linear_progress_demo.cpp'],
  dependencies: vaura_dep,
)

executable('badge_demo',
  sources: ['badge_demo.cpp'],
  dependencies: vaura_dep,
)

executable('avatar_demo',
  sources: ['avatar_demo.cpp'],
  dependencies: vaura_dep,
)

executable('tooltip_demo',
  sources: ['tooltip_demo.cpp'],
  dependencies: vaura_dep,
)

executable('list_tile_demo',
  sources: ['list_tile_demo.cpp'],
  dependencies: vaura_dep,
)

executable('accordion_demo',
  sources: ['accordion_demo.cpp'],
  dependencies: vaura_dep,
)

executable('tabs_demo',
  sources: ['tabs_demo.cpp'],
  dependencies: vaura_dep,
)

executable('settings_demo',
  sources: ['yoga_settings/main.cpp'],
  dependencies: vaura_dep,
)

executable('composite_demo',
  sources: ['composite_demo.cpp'],
  dependencies: vaura_dep,
)

executable('navigation_demo',
  sources: ['navigation_demo.cpp'],
  dependencies: vaura_dep,
)

executable('pickers_demo',
  sources: ['pickers_demo.cpp'],
  dependencies: vaura_dep,
)

executable('data_display_demo',
  sources: ['data_display_demo.cpp'],
  dependencies: vaura_dep,
)

executable('feedback_layouts_demo',
  sources: ['feedback_layouts_demo.cpp'],
  dependencies: vaura_dep,
)

executable('task_manager',
  sources: ['task_manager.cpp'],
  dependencies: vaura_dep,
)
