# Widgets Demo Build File

executable('demo_button',
  sources: ['button/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_card',
  sources: ['card/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_avatar',
  sources: ['avatar/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_slider',
  sources: ['slider/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_switch',
  sources: ['switch/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_badge',
  sources: ['badge/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_tabs',
  sources: ['tabs/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_list_tile',
  sources: ['list_tile/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_divider',
  sources: ['divider/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_checkbox',
  sources: ['checkbox/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_accordion',
  sources: ['accordion/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_radio',
  sources: ['radio/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_scroll_view',
  sources: ['scroll_view/main.cpp'],
  dependencies: vaura_dep,
)
