# Widgets Demo Build File

executable('demo_button',
  sources: ['button/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_card',
  sources: ['card/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_avatar',
  sources: ['avatar/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_slider',
  sources: ['slider/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_switch',
  sources: ['switch/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_badge',
  sources: ['badge/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_tabs',
  sources: ['tabs/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_list_tile',
  sources: ['list_tile/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_divider',
  sources: ['divider/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_checkbox',
  sources: ['checkbox/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_accordion',
  sources: ['accordion/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_radio',
  sources: ['radio/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_scroll_view',
  sources: ['scroll_view/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_bottom_sheet',
  sources: ['bottom_sheet/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_breadcrumb',
  sources: ['breadcrumb/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_calendar',
  sources: ['calendar/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_circular_progress',
  sources: ['circular_progress/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_color_picker',
  sources: ['color_picker/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_column',
  sources: ['column/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_container',
  sources: ['container/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_data_table',
  sources: ['data_table/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_date_picker',
  sources: ['date_picker/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_drawer',
  sources: ['drawer/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_image_widget',
  sources: ['image_widget/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_linear_progress',
  sources: ['linear_progress/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_navigation_rail',
  sources: ['navigation_rail/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_opacity',
  sources: ['opacity/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_popup_menu',
  sources: ['popup_menu/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_expansion_panel',
  sources: ['expansion_panel/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_fab',
  sources: ['fab/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_flexbox',
  sources: ['flexbox/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_gesture_detector',
  sources: ['gesture_detector/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_icon',
  sources: ['icon/main.cpp'],
  dependencies: vaura_dep,
)

# Batch 6

executable('demo_list_view',
  sources: ['list_view/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_row',
  sources: ['row/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_split_view',
  sources: ['split_view/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_stack',
  sources: ['stack/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_snackbar',
  sources: ['snackbar/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_toast',
  sources: ['toast/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_stepper',
  sources: ['stepper/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_text_field',
  sources: ['text_field/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_search_bar',
  sources: ['search_bar/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_text',
  sources: ['text/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_resizable_panels',
  sources: ['resizable_panels/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_shader_background',
  sources: ['shader_background/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_shader_button',
  sources: ['shader_button/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_shader_progress',
  sources: ['shader_progress/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_time_picker',
  sources: ['time_picker/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_transform',
  sources: ['transform/main.cpp'],
  dependencies: vaura_dep,
)

executable('demo_tree_view',
  sources: ['tree_view/main.cpp'],
  dependencies: vaura_dep,
)
